Vectorized ANN Forward Feed

--- a/Theoretical Machine Learning Notes.tex
+++ b/Theoretical Machine Learning Notes.tex
@@ -195,7 +195,7 @@ hinge loss : \(\phi_{\text{hinge}}(z) = [1 - z]_+ = \max{1 - z, 0}\), used in SV
 \newline 
 Exponential loss \(\phi_{\text{exp}}(z) = e^{-z}\), used in boosting 
 \section{Kernel Mapping (Special case demo by Linear Regression + Polymoninal Kernel)}
-(I) Purpose : To x map from lower higher dimension. Useful when data are non-linearly separable(Transform to a curve) 
+(I) Purpose : To map x from lower higher dimension. Useful when data are non-linearly separable(Transform to a curve) 
 \newline
 (II) Computation complexity does not necessarily increase proportionately.
 \newline
@@ -571,7 +571,7 @@ Rank Factorization: Let a matrix has Rank k , then A can be factorized as \(UV^T
 where U is m x k and \(V^T\) is k x n \newline 
 Low Rank Approximation : remove small K , therefore A is approximated to \(A_k =U_kS_kV^T\) \newline
 Used in compression, fine tune LLM, De-noising, Matrix completion. \newline
-Relationship between SVD and PCA (TODO) \newline
+Relationship between SVD and PCA (TODO CS168 notes) \newline
 
 
 \section{Backpropagation}
