--- a/DL Notes/Deep Learning Notes.tex
+++ b/DL Notes/Deep Learning Notes.tex
@@ -194,10 +194,157 @@ $$
 
 5. Jacobian of elementwise operation fuunction are diagonal. Therefore  \( \frac{\partial a^{[i]} }{\partial z^{[i]}} \) is a diagonal matrix \newline
 
+\section{Neural Network breakdown}
+\[
+z_1^{[1]}=
+\begin{bmatrix}
+w_{1,1}^{[1]},w_{1,2}^{[1]}
+\end{bmatrix}
+\begin{bmatrix}
+x_1 \\ x_2
+\end{bmatrix}
++ b_1^{[1]}
+\]
+
+\[
+z_2^{[1]}=
+\begin{bmatrix}
+w_{2,1}^{[1]},w_{2,2}^{[1]}
+\end{bmatrix}
+\begin{bmatrix}
+x_1 \\ x_2
+\end{bmatrix}
++ b_2^{[1]}
+\]
+
+\[
+z_3^{[1]}=
+\begin{bmatrix}
+w_{3,1}^{[1]},w_{3,2}^{[1]}
+\end{bmatrix}
+\begin{bmatrix}
+x_1 \\ x_2
+\end{bmatrix}
++ b_3^{[1]}
+\]
+
+\[ a_1^{[1]} = ReLU( z_1^{[1]}), a_2^{[1]} = ReLU( z_2^{[1]}), a_3^{[1]} = ReLU( z_3^{[1]}) \]
+
+\[a^{[1]} = ReLU 
+\begin{bmatrix}
+\begin{bmatrix}
+w_{1,1}^{[1]},w_{1,2}^{[1]} \\ 
+w_{2,1}^{[1]},w_{2,2}^{[1]} \\ 
+w_{3,1}^{[1]},w_{3,2}^{[1]} 
+\end{bmatrix}
+\begin{bmatrix}
+x_1 \\ x_2
+\end{bmatrix} +
+\begin{bmatrix}
+b_1^{[1]} \\ b_2^{[1]} \\ b_3^{[1]}
+\end{bmatrix} 
+\end{bmatrix}
+\]
+
+
+\[
+z_1^{[2]}=
+\begin{bmatrix}
+w_{1,1}^{[2]},w_{1,2}^{[2]},w_{1,3}^{[2]}
+\end{bmatrix}
+\begin{bmatrix}
+a_1^{[1]} \\ a_2^{[1]} \\ a_3^{[1]}
+\end{bmatrix}
++ b_1^{[2]}
+\]
+
+\[
+z_2^{[2]}=
+\begin{bmatrix}
+w_{2,1}^{[2]},w_{2,2}^{[2]},w_{2,3}^{[2]}
+\end{bmatrix}
+\begin{bmatrix}
+a_1^{[1]} \\ a_2^{[1]} \\ a_3^{[1]}
+\end{bmatrix}
++ b_2^{[2]}
+\]
+
+\[
+z_3^{[2]}=
+\begin{bmatrix}
+w_{3,1}^{[2]},w_{3,2}^{[2]},w_{3,3}^{[2]}
+\end{bmatrix}
+\begin{bmatrix}
+a_1^{[1]} \\ a_2^{[1]} \\ a_3^{[1]}
+\end{bmatrix}
++ b_3^{[2]}
+\]
+
+
+\[
+z_4^{[2]}=
+\begin{bmatrix}
+w_{4,1}^{[2]},w_{4,2}^{[2]},w_{4,3}^{[2]}
+\end{bmatrix}
+\begin{bmatrix}
+a_1^{[1]} \\ a_2^{[1]} \\ a_3^{[1]}
+\end{bmatrix}
++ b_4^{[2]}
+\]
+
+\[ a_1^{[2]} = ReLU( z_1^{[2]}), a_2^{[2]} = ReLU( z_2^{[2]}), a_3^{[2]} = ReLU( z_3^{[2]}), a_4^{[2]} = ReLU( z_4^{[2]}) \]
+
+
+\[a^{[2]} = ReLU 
+\begin{bmatrix}
+\begin{bmatrix}
+w_{1,1}^{[2]},w_{1,2}^{[2]},w_{1,3}^{[2]} \\ 
+w_{2,1}^{[2]},w_{2,2}^{[2]},w_{2,3}^{[2]} \\ 
+w_{3,1}^{[2]},w_{3,2}^{[2]},w_{3,3}^{[2]} \\
+w_{4,1}^{[2]},w_{4,2}^{[2]},w_{4,3}^{[2]}
+\end{bmatrix}
+\begin{bmatrix}
+a_1^{[1]} \\ a_2^{[1]} \\ a_3^{[1]}
+\end{bmatrix} +
+\begin{bmatrix}
+b_1^{[1]} \\ b_2^{[1]} \\ b_3^{[1]} \\ b_4^{[1]}
+\end{bmatrix} 
+\end{bmatrix}
+\]
 
 
 
-\section{Vectorized Backpropagation}
+\[
+z_1^{[3]}=
+\begin{bmatrix}
+w_{4,1}^{[2]},w_{4,2}^{[2]},w_{4,3}^{[2]},w_{4,4}^{[2]}
+\end{bmatrix}
+\begin{bmatrix}
+a_1^{[1]} \\ a_2^{[1]} \\ a_3^{[1]} \\ a_4^{[1]}
+\end{bmatrix}
++ b_1^{[3]}
+\]
+
+\[ o = a_1^{[3]} = ReLU( z_1^{[3]}) \]
+
+\[a^{[3]} = ReLU 
+\begin{bmatrix}
+\begin{bmatrix}
+w_{1,1}^{[3]},w_{1,2}^{[3]},w_{1,3}^{[3]},w_{1,3}^{[3]}
+\end{bmatrix}
+\begin{bmatrix}
+a_1^{[2]} \\ a_2^{[2]} \\ a_3^{[2]} \\ a_4^{[2]}
+\end{bmatrix} +
+\begin{bmatrix}
+b_1^{[1]} \\ b_2^{[1]} \\ b_3^{[1]} \\ b_4^{[1]}
+\end{bmatrix} 
+\end{bmatrix}
+\]
+
+
+
+
+\section{Vectorized Backpropagation. (Refer to Section 7)}
 Our objective is to make use of matrix calculus, gradient descent to tune W and b to minimize J by SGD or mini-batch GD \newline
 
 Algo 1 SGD : 
