--- a/DL Notes/Deep Learning Notes.tex
+++ b/DL Notes/Deep Learning Notes.tex
@@ -366,6 +366,63 @@ stacking up again :
 \[
 \frac{\partial L }{\partial W^{[2]}} = [ (a^{[3]}-y)W[3] \bigodot g(z^{[2]}) ] a^{[1]T} 
 \]
+But How ? Let's do it one-by-one:\newline 
+
+(i) Assume using sigmoid, by differentiation rule : \newline
+\[ \frac{\partial L }{\partial z^{[3]}} = \frac{\partial [-ylog(o)-(1-y)(log(1-o))] }{\partial z^{[3]}} = a^{[3]}-y ,\]
+ dimension :   \( \epsilon R^{1x1} \)  \newline \newline
+
+(ii) for \( \frac{\partial z^{[3]} }{\partial a^{[2]}} \) \newline
+\[ 
+\frac{\partial z^{[3]} }{\partial a^{[2]}} = 
+\frac{\partial (w_{1,1}^{[3]}a_1^{[2]}+w_{1,2}^{[3]}a_2^{[2]}+w_{1,3}^{[3]}a_3^{[2]}+w_{1,4}^{[3]}a_4^{[2]}) }
+{\partial (a_1^{[2]},a_2^{[2]},a_3^{[2]},a_4^{[2]})}
+\]
+\[ 
+= (w_{1,1}^{[3]},w_{1,2}^{[3]},w_{1,3}^{[3]},w_{1,4}^{[3]}) = W^{[3]}
+\]
+dimension :   \( \epsilon R^{1x4} \)  \newline \newline
+
+(ii) for \( \frac{\partial a^{[2]} }{\partial z^{[2]}} \) \newline
+\[ 
+\frac{\partial a^{[2]} }{\partial z^{[2]}} = 
+\frac{\partial (a_1^{[2]},a_2^{[2]},a_3^{[2]},a_4^{[2]}) }
+{\partial (z_1^{[2]},z_2^{[2]},z_3^{[2]},z_4^{[2]})}
+\]
+\[
+=\begin{bmatrix}
+ \dfrac{\partial g(z_1^{[2]})}{\partial z_1^{[2]}} & \dfrac{\partial g(z_1^{[2]})}{\partial z_2^{[2]}} & \dfrac{\partial g(z_1^{[2]})}{\partial z_3^{[2]}} & \dfrac{\partial g(z_1^{[2]})}{\partial z_4^{[2]}} \\ 
+ \dfrac{\partial g(z_2^{[2]})}{\partial z_1^{[2]}} & \dfrac{\partial g(z_2^{[2]})}{\partial z_2^{[2]}} & \dfrac{\partial g(z_2^{[2]})}{\partial z_3^{[2]}} & \dfrac{\partial g(z_2^{[2]})}{\partial z_4^{[2]}} \\ 
+ \dfrac{\partial g(z_3^{[2]})}{\partial z_1^{[2]}} & \dfrac{\partial g(z_3^{[2]})}{\partial z_2^{[2]}} & \dfrac{\partial g(z_3^{[2]})}{\partial z_3^{[2]}} & \dfrac{\partial g(z_3^{[2]})}{\partial z_4^{[2]}} \\ 
+ \dfrac{\partial g(z_4^{[2]})}{\partial z_1^{[2]}} & \dfrac{\partial g(z_4^{[2]})}{\partial z_2^{[2]}} & \dfrac{\partial g(z_4^{[2]})}{\partial z_3^{[2]}} & \dfrac{\partial g(z_4^{[2]})}{\partial z_4^{[2]}}
+\end{bmatrix}
+\]
+\[
+=\begin{bmatrix}
+ g'(z_1^{[2]}) & 0 & 0 & 0  \\ 
+ 0 & g'(z_2^{[2]}) & 0 & 0 \\ 
+0 & 0 &  g'(z_3^{[2]}) &0 \\ 
+ 0 & 0 & 0 & g'(z_4^{[2]})
+\end{bmatrix} = diag(g'(z^{[2]}))
+\]
+dimension :   \( \epsilon R^{4x4} \)  \newline \newline
+
+(iii) for \( \frac{\partial z^{[2]} }{\partial W_{i,j}^{[2]}} \) \newline
+\[
+\frac{\partial z^{[2]} }{\partial W_{i,j}^{[2]}}
+=\frac{ \partial \begin{bmatrix}
+w_{1,1}^{[2]}a_1^{[1]}+w_{1,2}^{[2]}a_2^{[1]}+w_{1,3}^{[2]}a_3^{[1]}+w_{1,4}^{[2]}a_4^{[1]} + b_1^{[1]}\\
+w_{2,1}^{[2]}a_1^{[1]}+w_{2,2}^{[2]}a_2^{[1]}+w_{2,3}^{[2]}a_3^{[1]}+w_{2,4}^{[2]}a_4^{[1]} + b_2^{[1]}\\
+w_{3,1}^{[2]}a_1^{[1]}+w_{3,2}^{[2]}a_2^{[1]}+w_{3,3}^{[2]}a_3^{[1]}+w_{3,4}^{[2]}a_4^{[1]} + b_3^{[1]}\\
+w_{4,1}^{[2]}a_1^{[1]}+w_{4,2}^{[2]}a_2^{[1]}+w_{4,3}^{[2]}a_3^{[1]}+w_{4,4}^{[2]}a_4^{[1]} + b_4^{[1]}
+\end{bmatrix} } {\partial W_{i,j}^{[2]}} 
+\]
+\[
+= a_j^{[i]}e_i
+\]
+for example , if i = 2 , j = 3 : then it is \(a_3 (0,1,0,0)^T=(0,a_3,0,0)^T\) \newline
+for example , if i = 4 , j = 4 : then it is \(a_4 (0,0,0,1)^T=(0,0,0,a_4)^T\) \newline
+dimension :   \( \epsilon R^{4x1} \)  \newline \newline
 We see here the step of GD is based on next layer's value, therefore we have update back propagated to previous layer.
 \section{Testing}
 \[
