--- a/DL Notes/Deep Learning Notes.tex
+++ b/DL Notes/Deep Learning Notes.tex
@@ -358,9 +358,11 @@ By Chain Rule of matrix calculus
 \frac{\partial L }{\partial W_{ij}^{[2]}} = ( \frac{\partial L }{\partial a^{[3]}} \frac{\partial a^{[3]}}{\partial z^{[3]}} )
 (\frac{\partial z^{[3]}}{\partial a^{[2]}}) ( \frac{\partial a^{[2]}}{\partial z^{[2]}})( \frac{\partial z^{[2]}}{\partial W_{ij}^{[2]}})
 \]
-
 \[
-= [ (a^{[3]}-y)W[3] \bigodot g(z^{[2]}) ]_i a_j^{[1]T} 
+= [ (a^{[3]}-y)W[3] \bigodot g'(z^{[2]}) ]_i a_j^{[1]}e_i 
+\]
+\[
+= [ (a^{[3]}-y)W[3] \bigodot g'(z^{[2]}) ]_i a_j^{[1]T} 
 \]
 stacking up again :
 \[
@@ -423,6 +425,65 @@ w_{4,1}^{[2]}a_1^{[1]}+w_{4,2}^{[2]}a_2^{[1]}+w_{4,3}^{[2]}a_3^{[1]}+w_{4,4}^{[2
 for example , if i = 2 , j = 3 : then it is \(a_3 (0,1,0,0)^T=(0,a_3,0,0)^T\) \newline
 for example , if i = 4 , j = 4 : then it is \(a_4 (0,0,0,1)^T=(0,0,0,a_4)^T\) \newline
 dimension :   \( \epsilon R^{4x1} \)  \newline \newline
+
+Recall : 
+\[
+\frac{\partial L }{\partial W_{ij}^{[2]}} = ( \frac{\partial L }{\partial a^{[3]}} \frac{\partial a^{[3]}}{\partial z^{[3]}} )
+(\frac{\partial z^{[3]}}{\partial a^{[2]}}) ( \frac{\partial a^{[2]}}{\partial z^{[2]}})( \frac{\partial z^{[2]}}{\partial W_{ij}^{[2]}})
+\]
+\[
+=  (a^{[3]}-y) (w_{1,1}^{[3]},w_{1,2}^{[3]},w_{1,3}^{[3]},w_{1,4}^{[3]}) 
+\begin{bmatrix}
+ g'(z_1^{[2]}) & 0 & 0 & 0  \\ 
+ 0 & g'(z_2^{[2]}) & 0 & 0 \\ 
+0 & 0 &  g'(z_3^{[2]}) &0 \\ 
+ 0 & 0 & 0 & g'(z_4^{[2]})
+\end{bmatrix} 
+ a_j^{[1]}e_i 
+\]
+
+\[
+=  (a^{[3]}-y) (w_{1,1}^{[3]} g'(z_1^{[2]}),w_{1,2}^{[3]} g'(z_2^{[2]}),w_{1,3}^{[3]} g'(z_3^{[2]}),w_{1,4}^{[3]}g'(z_4^{[2]})) 
+ a_j^{[1]}e_i 
+\]
+Therefore :
+
+\[
+\frac{\partial L }{\partial W_{ij}^{[2]}} =  (a^{[3]}-y) (w_{1,1}^{[3]} g'(z_1^{[2]}),w_{1,2}^{[3]} g'(z_2^{[2]}),w_{1,3}^{[3]} g'(z_3^{[2]}),w_{1,4}^{[3]}g'(z_4^{[2]}))e_i a_j^{[1]} 
+\]
+Stacking it up vertically : 
+\[
+\frac{\partial L }{\partial W^{[2]}} =  (a^{[3]}-y) 
+\begin{bmatrix}
+(w_{1,1}^{[3]} g'(z_1^{[2]})a_1^{[1]} & w_{1,1}^{[3]} g'(z_2^{[2]})a_2^{[1]} & w_{1,1}^{[3]} g'(z_3^{[2]})a_3^{[1]} & w_{1,1}^{[3]}g'(z_4^{[2]})a_4^{[1]} \\
+ (w_{1,2}^{[3]} g'(z_1^{[2]})a_1^{[1]} & w_{1,2}^{[3]} g'(z_2^{[2]})a_2^{[1]} & w_{1,2}^{[3]} g'(z_3^{[2]})a_3^{[1]} & w_{1,2}^{[3]}g'(z_4^{[2]})a_4^{[1]} \\
+ (w_{1,3}^{[3]} g'(z_1^{[2]})a_1^{[1]} & w_{1,3}^{[3]} g'(z_2^{[2]})a_2^{[1]} & w_{1,3}^{[3]} g'(z_3^{[2]})a_3^{[1]} & w_{1,3}^{[3]}g'(z_4^{[2]})a_4^{[1]} \\
+ (w_{1,4}^{[3]} g'(z_1^{[2]})a_1^{[1]} & w_{1,4}^{[3]} g'(z_2^{[2]})a_2^{[1]} & w_{1,4}^{[3]} g'(z_3^{[2]})a_3^{[1]} & w_{1,4}^{[3]}g'(z_4^{[2]})a_4^{[1]} 
+\end{bmatrix} 
+\]
+ \[
+ =  (a^{[3]}-y) 
+\begin{bmatrix}
+(w_{1,1}^{[3]} \\
+(w_{1,2}^{[3]} \\
+(w_{1,3}^{[3]} \\
+(w_{1,4}^{[3]} \\
+\end{bmatrix} 
+\bigodot
+\begin{bmatrix}
+g'(z_1^{[2]}) \\
+g'(z_2^{[2]})\\
+g'(z_3^{[2]}) \\
+g'(z_4^{[2]}) \\
+\end{bmatrix} 
+\begin{bmatrix}
+a_1^{[1]} & a_2^{[1]} & a_3^{[1]} & a_4^{[1]} 
+\end{bmatrix} 
+\]
+Therefore
+\[
+\frac{\partial L }{\partial W^{[2]}} = [ (a^{[3]}-y)W[3] \bigodot g(z^{[2]}) ] a^{[1]T} 
+\]
 We see here the step of GD is based on next layer's value, therefore we have update back propagated to previous layer.
 \section{Testing}
 \[
